[gd_scene load_steps=4 format=3 uid="uid://blbm0pd8mxphu"]

[ext_resource type="Script" path="res://platformer/scene_parts/Spikes.gd" id="2_oyf0t"]
[ext_resource type="Texture2D" uid="uid://b5jtlg3lu2i1w" path="res://assets/props/Spike.png" id="2_vrqnt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xoj4b"]
size = Vector2(696, 29)

[node name="Spikes" type="Area2D"]
collision_mask = 6
script = ExtResource("2_oyf0t")

[node name="SpikeTexture" type="TextureRect" parent="."]
offset_left = 11.0
offset_top = 3.0
offset_right = 285.0
offset_bottom = 43.0
texture = ExtResource("2_vrqnt")
stretch_mode = 1

[node name="Timer" type="Timer" parent="SpikeTexture"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(143.5, 26)
shape = SubResource("RectangleShape2D_xoj4b")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SpikeTexture/Timer" to="." method="_on_timer_timeout"]
